--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+
+            <div class="destination" id="rome">
+                <h2>Paris</h2>
+            </div>
+
+            <div class="destination" id="tokyo">
+                <h2>Paris</h2>
+            </div>
         </div>
     </div>
 
